fix invisible text in config, stats color button

--- a/client/styles/config.styl
+++ b/client/styles/config.styl
@@ -2,7 +2,7 @@
 	display: flex
 	flex-direction: column
 	align-items: stretch
-	background: #212121
+	background: #333
 
 	textarea
 		flex-grow: 1
@@ -15,7 +15,6 @@
 		font-size: 2em
 		margin: 60px auto 30px
 		position: relative
-		font-size: "Montserrat", sans-serif
 
 		&:first-child
 			margin-top: 10px
@@ -38,30 +37,25 @@
 			left: 100%
 			margin-left: 20px
 
-
 	button
 		background: color-blue
 		border: none
-		font-size: 2.5em
+		font-size: 1.8em
 		color: white
 		min-height: button-size
 		flex-basis: button-size
 		cursor: pointer
 
-	button:disabled 
-		background: color-red
-		opacity: 0.5
-
-	button:active
-		background: darken(color-blue, 10%)
+		&:active
+			background: darken(color-blue, 10%)
 
 	.seller
 		background: white
-		
+		color: #333
 		max-width: 50vw
 		min-width: 800px
 		align-self: center
-		margin: 20px
+		margin: 100px 0
 		padding: 30px
 		margin-bottom: 0
 		box-shadow: 0px 3px 10px rgba(0,0,0,.1)
@@ -127,6 +121,8 @@
 		align-self: center
 		margin-bottom: 20px
 		display: flex
+
+		noselect()
 		button
 			flex-grow: 1
 
